--- a/css/custom.css
+++ b/css/custom.css
@@ -1085,7 +1085,7 @@ footer .custom-text{
   font-family:xeicon;
   font-size:20px
 }
-.donate-process div.d i{
+.donate-process div.d em{
   display:none
 }
 
