--- a/css/custom.css
+++ b/css/custom.css
@@ -1100,9 +1100,15 @@ footer .custom-text{
 body._body_menu_m20220823dc9033a3846c4 .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(4),
 body._body_menu_m20220823dc9033a3846c4 .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(5),
 body._body_menu_m20220823dc9033a3846c4 .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(6),
-body._body_menu_m20220823dc9033a3846c4 .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(7){
+body._body_menu_m20220823dc9033a3846c4 .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(7),
+body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(4),
+body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(5),
+body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(6),
+body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal > ul >li:nth-child(7)
+{
   display:none;
 }
+
 
 /*기부 안내*/
 .donate-info a.float-left:after{
