--- a/css/custom.css
+++ b/css/custom.css
@@ -1179,13 +1179,17 @@ body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal{
 /*테이블*/
 table{
   border-top:2px solid #333 !important;
+  border-left:none !important;
   width:100%;
 }
 table td,
 table th{
   padding:1rem;
   border-bottom:1px solid #D8D8D8;
+  border-right:none !important;
+  border-left:none !important;
   vertical-align:top;
+  background-color:#fff !important;
 }
 table thead th{
   font-size:14px;
@@ -1210,8 +1214,8 @@ table tbody td{
 
 table.table-business01 td,
 table.table-business01 th{
-  padding-left:0;
-  padding-right:0;
+  padding-left:0 !important;;
+  padding-right:0 !important;;
 }
 
 table.table-business02 tbody th{
