--- a/css/custom.css
+++ b/css/custom.css
@@ -1184,7 +1184,7 @@ table{
 }
 table td,
 table th{
-  padding:1rem;
+  padding:1rem !important;
   border-bottom:1px solid #D8D8D8;
   border-right:none !important;
   border-left:none !important;
@@ -1192,11 +1192,11 @@ table th{
   background-color:#fff !important;
 }
 table thead th{
-  font-size:14px;
+  font-size:14px !important;;
   text-align:left;
 }
 table tbody th{
-  font-size:16px;
+  font-size:16px !important;;
   text-align:left;
 }
 table tbody td{
