--- a/css/custom.css
+++ b/css/custom.css
@@ -1127,19 +1127,22 @@ body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal{
   max-width:968px;
   width:100% !important;
   margin:0 auto !important;
+  position:static;
 }
 .sub-menu.h-menu-type2.menu-horizontal .slick-list{
   overflow:hidden;
   width:100%;
-  margin:0 -4px;
+  margin:0 0 !important;
 }
 .sub-menu.h-menu-type2.menu-horizontal ul li {
-  padding:0 4px;
+  padding:0 4px 0 0 !important;
 }
 .sub-menu.h-menu-type2.menu-horizontal ul li a{
   display:block;
   border:1px solid #E7A3C4;
   padding:8px 32px;
+  box-sizing: border-box;
+  margin:0 !important;
 }
 .sub-menu.h-menu-type2.menu-horizontal ul li a:hover{
   border-color:#D03B83;
