--- a/css/responsive.css
+++ b/css/responsive.css
@@ -449,11 +449,18 @@ writer: css3studio
   .sub-menu.h-menu-type1.menu-horizontal{
     display:block !important;
     margin-bottom:48px;
+    overflow-x:scroll; 
+    padding-bottom:1px;
+  }
+  .sub-menu.h-menu-type1.menu-horizontal > ul{
+    display:flex !important;
   }
   .sub-menu.h-menu-type1.menu-horizontal > ul >li a{
     font-size:14px !important;;
-    margin:0 10px !important;
+    margin:0 16px !important;
     padding-bottom:8px;
+    white-space:nowrap; 
+
   }
 
 
