--- a/css/custom.css
+++ b/css/custom.css
@@ -1441,3 +1441,14 @@ table.table-business02 tbody th{
 .board._list_wrap .li_board .category a em{
   font-weight:bold;
 }
+
+/*** 교육장 대여 ***/
+
+.btn_a35bf512248c2{
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 10px;
+  align-items: center;
+  font-size:16px;
+  padding:12px 10px 12px 24px !important;;
+}
