--- a/css/custom.css
+++ b/css/custom.css
@@ -1470,3 +1470,37 @@ table.table-business02 tbody th{
   font-size:16px;
   padding:12px 10px 12px 24px !important;;
 }
+
+/* modal */
+.modal-dialog main > .inside{
+  padding:0 56px;
+}
+.modal-dialog .form-widget{
+  padding:0 0 56px;
+}
+.modal-dialog .modal-header{
+  border:none !important;
+}
+.modal-dialog .modal-header .modal-title{
+  display:none;
+}
+.modal-dialog form{
+  margin-bottom:32px;
+}
+.modal-dialog form input{
+  border-color:#D8D8D8;
+  border-radius:8px;
+  height:40px;
+}
+.modal-dialog form textarea
+{
+  border-color:#D8D8D8;
+  border-radius:8px;
+  height:80px;
+}
+.modal-dialog .form.text-center ._input_form_submit{
+  background-color:#666666 !important;
+  font-size:16px;
+}
+
+
