--- a/html/custom.css
+++ b/html/custom.css
@@ -1292,7 +1292,7 @@ body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal{
   margin:0 auto;
 }
 
-/*성평등 기금*/
+/**/
 
 .slide_02.type_slide.owl-carousel.gallery2 .owl-prev::before,
 .slide_02.type_slide.owl-carousel.gallery2 .owl-next::before{
