--- a/css/custom.css
+++ b/css/custom.css
@@ -1331,7 +1331,25 @@ body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal{
   transform:rotate(180deg) !important;
 }
 
-
+/*W 기금*/
+.grid_02.type_grid.img_border.gallery2 .gallery_row{
+  margin-bottom:64px;
+}
+.grid_02.type_grid.img_border.gallery2 .img_wrap{
+  margin-bottom:24px;
+}
+.grid_02.type_grid.img_border.gallery2 .text_wrap{
+  padding:0 !important;
+}
+.grid_02.type_grid.img_border.gallery2 .text_wrap .title{
+  padding:32px 80px 0 0 !important;
+  position:relative;
+  font-weight:700;
+}
+.grid_02.type_grid.img_border.gallery2 .text_wrap .title span{
+  position:absolute;
+  top:0;
+}
 
 
 /*테이블*/
