--- a/css/responsive.css
+++ b/css/responsive.css
@@ -594,6 +594,26 @@ writer: css3studio
     display:block;
   }
   
+  /*W 기금*/
+  .grid_02.type_grid.img_border.gallery2 .gallery_row{
+    margin-bottom:24px;
+  }
+  .grid_02.type_grid.img_border.gallery2 .img_wrap{
+    margin-bottom:16px;
+  }
+  .grid_02.type_grid.img_border.gallery2 .text_wrap{
+    padding:0 !important;
+  }
+  .grid_02.type_grid.img_border.gallery2 .text_wrap .title{
+    padding:24px 80px 0 0 !important;
+    font-size:16px !important;
+  }
+  .grid_02.type_grid.img_border.gallery2 .text_wrap .title span{
+    font-size:14px !important;
+  }
+
+  
+  
 /*** 교육장 대여 ***/
   #w20220826c0f591e38327f{
     margin:0 -16px 40px;
