--- a/css/custom.css
+++ b/css/custom.css
@@ -1241,6 +1241,15 @@ body._body_menu_m20220823b6e14e2b2ac2a .sub-menu.h-menu-type1.menu-horizontal{
   display:none
 }
 
+a.arrow{
+  display:flex;
+  white-space:nowrap;
+}
+a.arrow:after{
+  content:"\e93e";
+  font-family:xeicon;
+  margin-left:8px
+}
 
 .accordion01{
   border-top:2px solid #000;
