--- a/css/custom.css
+++ b/css/custom.css
@@ -1589,4 +1589,28 @@ table.table-business02 tbody th{
   font-size:16px;
 }
 
-
+#w20220829ab1bf95de80fe form{
+  border-top:2px solid #111;
+}
+#w20220829ab1bf95de80fe form .form-group{
+  border-bottom:1px solid #D8D8D8;
+  display:flex;
+  align-items: center;
+  padding:16px;
+  margin-bottom:0
+}
+#w20220829ab1bf95de80fe form .form-group > label{
+  flex-shrink: 0;
+  width:23%;
+  font-weight:bold
+}
+#w20220829ab1bf95de80fe form .form-group .checkbox{
+  margin-right:16px;
+}
+#w20220829ab1bf95de80fe form .form-group.privacy{
+  display:block;
+  padding:16px 0;
+}
+#w20220829ab1bf95de80fe form .form-group textarea{
+  height:160px;
+}
