--- a/css/custom.css
+++ b/css/custom.css
@@ -1638,7 +1638,9 @@ table.table-business02 tbody th{
 #w2022080495e743d58397c .btn_bee42881d1523,
 #w2022080495e743d58397c .btn_bee42881d1523:hover,
 #w2022080546c270cc168a5 .btn_368u3L030Q,
-#w2022080546c270cc168a5 .btn_368u3L030Q:hover
+#w2022080546c270cc168a5 .btn_368u3L030Q:hover,
+#w20220805efd50c0202ba4 .btn_17mu53r1o1,
+#w20220805efd50c0202ba4 .btn_17mu53r1o1:hover
 {
   color:#fff !important;
 }
