--- a/css/custom.css
+++ b/css/custom.css
@@ -1640,7 +1640,9 @@ table.table-business02 tbody th{
 #w2022080546c270cc168a5 .btn_368u3L030Q,
 #w2022080546c270cc168a5 .btn_368u3L030Q:hover,
 #w20220805efd50c0202ba4 .btn_17mu53r1o1,
-#w20220805efd50c0202ba4 .btn_17mu53r1o1:hover
+#w20220805efd50c0202ba4 .btn_17mu53r1o1:hover,
+#w202208059a869df4eb532 .btn_F2g1IiFB2Z,
+#w202208059a869df4eb532 .btn_F2g1IiFB2Z:hover
 {
   color:#fff !important;
 }
