--- a/css/custom.css
+++ b/css/custom.css
@@ -1664,7 +1664,8 @@ table.table-business02 tbody th{
   font-weight:400;
   color:#B50F5F !important;
 }
-#w2022080478a6ce4d6e85f .btn
+#w2022080478a6ce4d6e85f .btn,
+#w20220805bb97a562d016b .btn
 {
   color:#B50F5F !important;
 }
