--- a/css/custom.css
+++ b/css/custom.css
@@ -1665,7 +1665,8 @@ table.table-business02 tbody th{
   color:#B50F5F !important;
 }
 #w2022080478a6ce4d6e85f .btn,
-#w20220805bb97a562d016b .btn
+#w20220805bb97a562d016b .btn,
+#w2022080521c88ff5dc433 .btn
 {
   color:#B50F5F !important;
 }
