--- a/css/custom.css
+++ b/css/custom.css
@@ -1666,7 +1666,8 @@ table.table-business02 tbody th{
 }
 #w2022080478a6ce4d6e85f .btn,
 #w20220805bb97a562d016b .btn,
-#w2022080521c88ff5dc433 .btn
+#w2022080521c88ff5dc433 .btn,
+#w20220805be185394d5940 .btn
 {
   color:#B50F5F !important;
 }
